[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Actors/Bullets/Lasers/Laser.gd" type="Script" id=1]
[ext_resource path="res://Game/Actors/Bullets/Lasers/Laser-1.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 3.90683, 10.6067 )

[sub_resource type="Animation" id=2]

resource_name = "dead"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Image:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 4, -4 ),
"update": 0,
"values": [ Vector2( 0.6, 0.7 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Image:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 4, -4 ),
"update": 0,
"values": [ 0.0, 720.0 ]
}

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Image:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( -4, -4, -4 ),
"update": 0,
"values": [ Vector2( 0.6, 0.7 ), Vector2( 1, 1 ), Vector2( 0.6, 0.7 ) ]
}

[node name="Laser" type="RigidBody2D" groups=[
"PlayerBullet",
"Bullet",
]]

input_pickable = false
collision_layer = 21
collision_mask = 21
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
damage = 1
cant_bullet = -1
is_colorful = false

[node name="Image" type="Sprite" parent="." index="0"]

scale = Vector2( 0.6, 0.7 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Collision" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Live" type="Timer" parent="." index="2"]

process_mode = 0
wait_time = 1.0
one_shot = true
autostart = true

[node name="Anim" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/dead = SubResource( 2 )
anims/start = SubResource( 3 )
blend_times = [  ]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="4"]

rect = Rect2( -10, -10, 20, 20 )

[connection signal="timeout" from="Live" to="." method="_on_Live_timeout"]

[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]


